--- a/app/src/main/res/layout/item_popup_layout.xml
+++ b/app/src/main/res/layout/item_popup_layout.xml
@@ -9,7 +9,7 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="71dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp">
 
@@ -31,7 +31,6 @@
                 android:paddingEnd="48dp"
                 android:textSize="20sp"/>
     </LinearLayout>
-
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
